tests/diagnostics/user_box_type.kal
# Box is a built-in type and cannot be redefined.
struct Box { x: i64 }
